--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "expresss": "^0.0.0",
+    "gps-tracking": "^1.1.1",
     "graphql-yoga": "^1.18.3",
     "http": "^0.0.1-security",
     "node-fetch": "2.0",
