--- a/practice/graphql_practice/package.json
+++ b/practice/graphql_practice/package.json
@@ -7,6 +7,7 @@
     "expresss": "^0.0.0",
     "graphql-yoga": "^1.18.3",
     "http": "^0.0.1-security",
+    "mysql": "^2.18.1",
     "node-fetch": "2.0",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
