--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "expresss": "^0.0.0",
     "gps-tracking": "^1.1.1",
     "graphql-yoga": "^1.18.3",
     "http": "^0.0.1-security",
+    "mongoose": "^6.2.3",
     "node-fetch": "2.0",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
